--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 </body>
 <div class="WorksLink">
-    <a href="file:///Users/Irenemarie/Desktop/Portfolio_Website/index.html" >Work</a>
+    <a href="https://irenechamorro.github.io/Portfolio-Website/" >Work</a>
 </div>
 
 <div class="AboutLink">
-    <a href="file:///Users/Irenemarie/Desktop/Portfolio_Website/about.html" >About</a> 
+    <a href="https://irenechamorro.github.io/about_page/" >About</a> 
 </div>
 
 
